feat(All): 1.新增阅读字体大小设置 2.新增自定义章节名设置

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -50,7 +50,7 @@
 
     <actions>
         <action id="com.zhjw.water_reader.FileSetting" class="com.zhjw.water_reader.action.FileSetting"
-                text="WaterBookFileSetting" icon="AllIcons.Nodes.BookmarkGroup">
+                text="WaterBookFileSetting" icon="AllIcons.General.Settings">
             <add-to-group group-id="HelpMenu" anchor="first"/>
         </action>
     </actions>
