feat(All): 1.新增书籍大小限制

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -35,6 +35,13 @@
         </dl>
         ]]></description>
 
+    <change-notes><![CDATA[
+    <h2>1.1.1</h2>
+    <ul>
+      <li>[FIX]limit txt file length</li>
+    </ul>
+    ]]></change-notes>
+
     <!-- Product and plugin compatibility requirements.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
     <depends>com.intellij.modules.platform</depends>
